# my_beginner_tutorials

./: .gitignore  README.md
beginner_tutorials/: README.md  package.xml
beginner_tutorials/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
beginner_tutorials/install/beginner_tutorials/lib/beginner_tutorials/: listener  talker
beginner_tutorials/install/beginner_tutorials/share/ament_index/resource_index/parent_prefix_path/: beginner_tutorials
beginner_tutorials/install/beginner_tutorials/share/beginner_tutorials/: local_setup.sh  package.sh
beginner_tutorials/log/: latest_build
beginner_tutorials/src/: publisher_member_function.cpp
results/: bag_info.txt
results/rosbag2_2025_11_17-12_46_30/: metadata.yaml  rosbag2_2025_11_17-12_46_30_0.db3
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/include/beginner_tutorials/: minimal_publisher.hpp
src/beginner_tutorials/launch/: bag_record.launch.py  generate_tf_frames.launch.py  talker_listener.launch.py
src/beginner_tutorials/scripts/: generate_tf_frames.sh
src/beginner_tutorials/src/: minimal_publisher.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/beginner_tutorials/srv/: ChangeString.srv
src/beginner_tutorials/test/: talker_integration_test.cpp
src/beginner_tutorials/test/ament_cmake_test_stub/ament_cmake_test/: __init__.py
